Fix background z-indexing, minor html reorganization, tweak background shimmering

--- a/webapp/sass/main.scss
+++ b/webapp/sass/main.scss
@@ -5,14 +5,18 @@
 @import "countdown", "tweets";
 
 body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   font-family: 'Titillium Web', Arial, sans-serif;
   font-size: 12px;
   font-weight: 200;
   background-color: #a4d275;
-  background-position: center center;
+}
+
+.main {
+  position: relative;
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .canvas {
